# logmine

./: .gitmodules  CMakeLists.txt  README.md
include/: align.h  logmine.h  tokens.h
src/: logmine.cpp
tests/src/: align_tests.cpp  logmine_tests.cpp  tests.cpp  tokens_tests.cpp
